# save-ma-money

./: .docs  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  Setup.xlsx  pyproject.toml  ~$Setup.xlsx
modules/api/: API_Documentation.md.md  API_Endpoints.md.md  README.md  README.md - Project Structure.md  pyproject.toml
modules/api/src/papita_txnsapi/: __init__.py  __meta__.py
modules/api/src/papita_txnsapi/config/: settings.py
modules/api/src/papita_txnsapi/core/: security.py
modules/backend/: README.md  pyproject.toml
modules/backend/src/papita_txnsapi/: __init__.py  __meta__.py
modules/backend/src/papita_txnsapi/core/: exceptions.py  settings.py
modules/backend/src/papita_txnsapi/core/misc/: Setup.xlsx  logger.yaml
modules/backend/src/papita_txnsapi/core/security/: auth.py
modules/backend/src/papita_txnsapi/dependencies/: __init__.py  database.py  session.py
modules/backend/src/papita_txnsapi/handlers/: abstract.py
modules/backend/src/papita_txnsapi/security/: hashing.py
modules/backend/tests/: conftest.py  test_dependencies_session.py  test_security_hashing.py
modules/model/: README.md  alembic.ini  pyproject.toml
modules/model/alembic/: env.py  script.py.mako
modules/model/alembic/versions/: 2025_10_03_0020-04b3e47603b6_seed_version.py  2025_10_14_2211-93420bed0a90_seed_version.py  2026_01_28_1851-53fec3d56681_adding_new_fields.py  2026_01_28_1921-06b97dfcb5c7_adding_user_table_and_owner_columns.py  2026_01_30_0046-255bb7382571_types_update.py  2026_01_30_0334-ccaa69123f7e_fixing_issue_with_user.py  2026_04_01_2039-cb967e741bf3_seed_v2_3.py
modules/model/src/papita_txnsmodel/: __init__.py  __meta__.py
modules/model/src/papita_txnsmodel/access/: accounts.py  assets.py  base.py  indexers.py  liabilities.py  markets.py  transactions.py  types.py  users.py
modules/model/src/papita_txnsmodel/access/accounts/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/assets/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/base/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/indexers/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/liabilities/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/transactions/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/types/: dto.py  repository.py
modules/model/src/papita_txnsmodel/access/users/: dto.py  repository.py
modules/model/src/papita_txnsmodel/configs/: logger.yaml
modules/model/src/papita_txnsmodel/configs/dictionaries/: crypto.yml  fiat.yml  market_assets.yml
modules/model/src/papita_txnsmodel/database/: connector.py  upsert.py
modules/model/src/papita_txnsmodel/handlers/: abstract.py  accounts.py  base.py  factory.py  helpers.py  transactions.py  types.py
modules/model/src/papita_txnsmodel/helpers/: enums.py  markets.py
modules/model/src/papita_txnsmodel/helpers/hashing/: abstract.py  argon2.py  factory.py
modules/model/src/papita_txnsmodel/model/: __init__.py  accounts.py  assets.py  base.py  constants.py  contstants.py  enums.py  indexers.py  liabilities.py  markets.py  transactions.py  types.py  users.py
modules/model/src/papita_txnsmodel/services/: __init__.py  assets.py  base.py  extends.py  indexers.py  liabilities.py  transactions.py  types.py  users.py
modules/model/src/papita_txnsmodel/utils/: classutils.py  configutils.py  datautils.py  enums.py  frequtils.py  hashutils.py  modelutils.py
modules/model/tests/: conftest.py
modules/model/tests/database/: test_connector.py  test_upsert.py
modules/model/tests/handlers/: test_base.py
modules/model/tests/services/: test_assets.py
modules/model/tests/tests_papita_txnsmodel/: __init__.py
modules/model/tests/tests_papita_txnsmodel/access/: __init__.py
modules/model/tests/tests_papita_txnsmodel/access/accounts/: __init__.py  test_dto.py  test_repository.py
modules/model/tests/tests_papita_txnsmodel/access/base/: __init__.py  test_dto.py  test_repository.py
modules/model/tests/tests_papita_txnsmodel/database/: __init__.py  test_connector.py  test_upsert.py
modules/model/tests/tests_papita_txnsmodel/services/: test_base.py
modules/model/tests/tests_papita_txnsmodel/utils/: __init__.py  test_classutils.py  test_configutils.py  test_datautils.py  test_enums.py  test_frequtils.py  test_modelutils.py
modules/model/tests/utils/: test_classutils.py  test_datautils.py
modules/plugins/: README.md  pyproject.toml
modules/plugins/src/papita_txnsplugins/: __meta__.py
modules/plugins/src/papita_txnsplugins/core/: builders.py  csv.py  excel.py
modules/registrar/: README.md  pyproject.toml
modules/registrar/src/papita_txnsregistrar/: __init__.py  __main__.py  __meta__.py
modules/registrar/src/papita_txnsregistrar/builders/: abstract.py  base.py
modules/registrar/src/papita_txnsregistrar/configs/: logger.yaml
modules/registrar/src/papita_txnsregistrar/contracts/: loader.py  meta.py  plugin.py  registry.py
modules/registrar/src/papita_txnsregistrar/defaults/: logging.yml
modules/registrar/src/papita_txnsregistrar/handlers/: abstract.py  accounts.py  base.py  core.py  factory.py  transactions.py  types.py
modules/registrar/src/papita_txnsregistrar/loaders/: abstract.py  adapter.py
modules/registrar/src/papita_txnsregistrar/loaders/file/: abstract.py  base.py  impl.py
modules/registrar/src/papita_txnsregistrar/loaders/memory/: impl.py
modules/registrar/src/papita_txnsregistrar/utils/: cli.py  connector.py  enums.py  logger.py  main.py  modelutils.py
modules/registrar/src/papita_txnsregistrar_plugins/core/: builders.py  excel.py
modules/registrar/tests/tests_papita_txnsregistrar/: __init__.py
modules/registrar/tests/tests_papita_txnsregistrar/loaders/: test_abstract.py
modules/registrar/tests/tests_papita_txnsregistrar/utils/: test_connector.py  test_enums.py  test_main.py  test_modelutils.py
modules/tracker/: README.md  pyproject.toml
modules/tracker/src/papita_txnstracker/utils/: discovery.py  frequtils.py  modelutils.py
papita-transactions-api/: pyproject.toml
(+93 files in other folders)
