[project]
name = "papita-transactions-api"
version = "0.0.3a8"
description = "API for this mess"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Elmorralito", email = "drestrepohinc@gmail.com" }
]
dependencies = [
    "python-dateutil (>=2.8.2)",
    "papita-transactions-model (>=0.1.0,<1.0)",
    "papita-transactions-registrar (>=0.0.2,<1.0)",
]

[project.urls]
HomePage = "https://github.com/Elmorralito/save-ma-money"

[tool.poetry]
packages = [
    { include = "papita_txnsapi", from = "src/" },
]

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"
