[project]
name = "papita-transactions-api"
version = "0.0.3a14"
description = "API for this mess"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Elmorralito", email = "drestrepohinc@gmail.com" }
]
dependencies = [
    "python-dateutil (>=2.8.2)",
    "papita-transactions-model (>=0.1.0,<1.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)"

]

[project.urls]
HomePage = "https://github.com/Elmorralito/save-ma-money"

[tool.poetry]
packages = [
    { include = "papita_txnsapi", from = "src/" },
]

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"
