[project]
name = "papita-transactions-registrar"
version = "0.1.6a23"
description = "Transactions wrapper to automate tracking financial transaction movements"
readme = {file = "README.md", content-type = "text/markdown"}
license = "LICENSE"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Elmorralito", email = "drestrepohinc@gmail.com" }
]
dependencies = [
    "papita-transactions-model (>=0.1.0,<1.0)",
    "pydantic (>=2.3.0,<3.0)",
    "pandas (>=2.3.1,<2.4.0)",
    "openpyxl (>=3.1.2,<4.0)",
    "python-dateutil (>=2.8.2,<3.0)",
    "semver (>=3.0.4,<4.0.0)",
    "rapidfuzz (>=3.14.1,<4.0.0)",
    "smart-open[s3] (>=7.5.0,<8.0.0)",
]

[project.optional-dependencies]
base-plugins = [
    "papita-transactions-registrar-plugins (>=0.1.0,<1.0)",
]

[project.urls]
HomePage = "https://github.com/Elmorralito/save-ma-money/tree/main/modules/registrar"

[tool.poetry]
packages = [
    { include = "papita_txnsregistrar", from = "src/" },
]

[tool.poetry.scripts]
papita-txnsregistrar = "papita_txnsregistrar.__main__:main"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"
